# enso-portable

./: .gitignore  README.linux.md  README.macos.md  _config.yml  changelog.md  changelog.txt  commands.md  index.html  install_linux.sh  install_macos.sh  make_dist_unix.cmd  makefile  readme.md  setup.nsi
.claude/: settings.local.json
.github/: FUNDING.yml
_layouts/: default.html
docs/: LICENSE
enso/: debug.bat  debug.sh
enso/commands/: calc.py  color_theme.py  dd_wrt.py  dial.py  enso.py  go.py  go_unix.py  idgen.py  lingvo.py  mac_tools.py  mount.py  mpc.py  open.py  retreat.py  session.py  system.py  text_tools.py  wake.py  web_search.py  win_tools.py  winamp.py  window_tools.py  wireless.py
enso/docs/: enso-docs.txt
enso/enso/: __init__.py  cairo.py  config.py  events.py  plugins.py  providers.py  selection.py  strings.py  tray_actions.py  usercfg.py  webui.py
enso/enso/commands/: __init__.py  factories.py  interfaces.py  manager.py  suggestions.py
enso/enso/contrib/: evaluate.py  google.py  help.py  retreat.html  retreat.py  retreatlib.pyd  voice.py  voicecmd.py  voicecmd.pyd  voicecmd_mock.py  voicecmdlib.pyd
enso/enso/graphics/: __init__.py  font.py  measurement.py  rounded_rect.py  textlayout.py  transparentwindow.py  xmltextlayout.py
enso/enso/input/: __init__.py
enso/enso/messages/: __init__.py  miniwindows.py  primarywindow.py  windows.py
enso/enso/platform/: __init__.py
enso/enso/quasimode/: __init__.py  charmaps.py  layout.py  linewindows.py  suggestionlist.py  window.py
enso/enso/user/: __init__.py  mediacollect.py  mediaprobe.py
enso/enso/utils/: decorators.py  memoize.py  strings.py  xml_tools.py
enso/enso/webui/: API.html  about.html  about.js  changes.html  commands.html  commands.js  confirm.html  edit.css  edit.html  edit.js  enso.js  index.html  install.js  options.css  options.html  options.js  redirect.html  scheduler.html  scheduler.js  tasks.html  tasks.js  tutorial.html
enso/lib/: SendKeys.py
enso/lib/mpcapi/: commands.py  core.py
enso/media/images/: Enso.icns
enso/scripts/: ensorc.py.default  launcher_utils.py  run_enso.py  run_enso_linux.py  test_input_macos.py  test_transparent_window_linux.py
landing/: Enso Launcher.dc.html  build.mjs  index.html
landing/design/: Enso Launcher.dc.html
launcher/: launcher.sln
launcher/launcher/: LimitSingleInstance.h  ReadMe.txt  launcher.aps  launcher.cpp  launcher.rc  launcher.vcxproj  launcher.vcxproj.filters  resource.h  stdafx.h
media/: enso-calculate.webm  enso.webm
patches/mpcapi/: __init__.py  commands.py  core.py
patches/pywin32-223/: setup.py
platform/: README.win32  SConstruct  SConstruct.win32
platform/win32/ClipboardBackend/: ClipboardBackend.cxx  ClipboardBackend.h  ClipboardBackend.i  ClipboardBackendPrivateFunctions.h  ClipboardFormatRenderer.h  PythonClipboardFormatRenderer.cxx  PythonClipboardFormatRenderer.h  PythonClipboardFormatRenderer.i  SConscript
platform/win32/Graphics/: SConscript
platform/win32/Include/: GlobalConstants.h  WinSdk.h
platform/win32/InputManager/: AsyncEventProcessorRegistry.cxx  AsyncEventThread.cxx  AsyncEventThread.i  EnsoThread.cxx  ExitHandler.c  ExitHandler.h  HookHandlers.c  HookHandlers.h  InputManager.cxx  InputManager.h  InputManager.i  InputManagerConstants.h  InputManagerExceptions.h  KeyhookDll.c  KeyhookDll.h  SConscript
platform/win32/Logging/: Logging.cxx  SConscript
platform/win32/SConsTools/: Helpers.py  HumanizedUtilsTool.py  SwigTool.py
platform/win32/VoiceCmd/: CMakeLists.txt  build.ps1  readme.md
platform/win32/VoiceCmd/cmake/: deploy_pyd.cmake
platform/win32/VoiceCmd/include/voicecmd/: backend.h  config.h  confirm.h  engine.h  events.h
platform/win32/VoiceCmd/src/backend/fake/: fake_backend.h
platform/win32/VoiceCmd/src/backend/sapi/: sapi_backend.cpp  sapi_backend.h
platform/win32/VoiceCmd/src/core/: engine.cpp
platform/win32/VoiceCmd/src/python/: module.cpp
platform/win32/VoiceCmd/src/win32/: session_monitor.cpp  session_monitor.h
platform/win32/VoiceCmd/tests/: sapi_smoke.cpp  test_core.cpp  test_util.h
tools/: sign-uiaccess.ps1
webui-src/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
webui-src/src/: App.vue  main.ts
webui-src/src/api/: client.ts  enso.ts  types.ts
webui-src/src/assets/: base.css  editor.css  theme.css
webui-src/src/components/: AppHeader.vue  CodeEditor.vue  CommandsTable.vue  ConnectionBanner.vue  EditorToolbar.vue  StaticDoc.vue  lazy.ts
(+405 files in other folders)
